Update email input style: white text on dark background

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
         .signup-form { display: flex; gap: 10px; justify-content: center; margin-bottom: 30px; transition: opacity 0.3s; }
         
         input[type="email"] {
-            background: #ffffff;
-            border: 1px solid #e4e4e7;
+            background: #111111;
+            border: 1px solid #333333;
             border-radius: 6px; 
             padding: 14px 18px; 
             font-size: 1.1rem; 
-            color: #18181b; 
+            color: #ffffff; 
             width: 340px; 
             outline: none; 
             font-family: 'Inter', sans-serif;
