Fix: Adjust mobile subtitle font size and flow

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
         /* Mobile Responsiveness */
         @media (max-width: 600px) {
             h1 { font-size: 2.5rem; }
-            p.subtitle { font-size: 1rem; margin-bottom: 30px; }
+            p.subtitle { font-size: 0.95rem; margin-bottom: 30px; padding: 0 10px; line-height: 1.5; }
+            p.subtitle br { display: none; }
             .signup-form { flex-direction: column; align-items: center; gap: 15px; }
             input[type="email"] { width: 100%; }
             button { width: 100%; }
