Fix: Restore mobile header size and center email input text

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
 
         /* Mobile Responsiveness */
         @media (max-width: 600px) {
-            h1 { font-size: 2.5rem; }
+            h1 { font-size: 4rem; }
             p.subtitle { font-size: 0.95rem; margin-bottom: 30px; padding: 0 10px; line-height: 1.5; }
             p.subtitle br { display: none; }
             .signup-form { flex-direction: column; align-items: center; gap: 15px; }
-            input[type="email"] { width: 100%; }
+            input[type="email"] { width: 100%; text-align: center; }
             button { width: 100%; }
         }
 
