Fix: Fine-tune mobile typography sizing and wrapping

--- a/index.html
+++ b/index.html
@@ -105,8 +105,16 @@
 
         /* Mobile Responsiveness */
         @media (max-width: 600px) {
-            h1 { font-size: 4rem; }
-            p.subtitle { font-size: 0.95rem; margin-bottom: 30px; padding: 0 10px; line-height: 1.5; }
+            h1 { font-size: 3.2rem; }
+            p.subtitle { 
+                font-size: 1.1rem; 
+                margin-bottom: 30px; 
+                padding: 0 20px; 
+                line-height: 1.5;
+                max-width: 320px;
+                margin-left: auto;
+                margin-right: auto;
+            }
             p.subtitle br { display: none; }
             .signup-form { flex-direction: column; align-items: center; gap: 15px; }
             input[type="email"] { width: 100%; text-align: center; }
