--- a/index.html
+++ b/index.html
@@ -105,15 +105,14 @@
 
         /* Mobile Responsiveness */
         @media (max-width: 600px) {
-            h1 { font-size: 3.2rem; }
+            h1 { font-size: 3.6rem; }
             p.subtitle { 
                 font-size: 1.1rem; 
+                font-weight: 600;
                 margin-bottom: 30px; 
-                padding: 0 20px; 
-                line-height: 1.5;
-                max-width: 320px;
-                margin-left: auto;
-                margin-right: auto;
+                padding: 0; 
+                line-height: 1.4;
+                max-width: 100%;
             }
             p.subtitle br { display: none; }
             .signup-form { flex-direction: column; align-items: center; gap: 15px; }
