--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
         // Initialize Supabase
         if (!SUPABASE_URL || !SUPABASE_ANON_KEY) {
             console.error('Supabase config missing. Make sure supabase-config.js is present.');
+        } else {
+            console.log('Supabase URL:', SUPABASE_URL); // Debugging: Check URL in console
         }
         const { createClient } = supabase;
         const _supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
