Complete v0 redesign with new layout, features, FAQ, and styling updates

--- a/index-v0.html
+++ b/index-v0.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InMotion - Your AI-Powered Personal Trainer</title>
-    <meta name="description" content="Get daily, personalized workouts built for your needs by an Ivy League Athlete's fitness algorithm.">
+    <meta name="description" content="Get daily, personalized workouts built for your need by an Ivy League Athlete's fitness algorithm.">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,9 @@
         <div class="container">
             <nav>
                 <a href="#" class="logo">
-                    <img src="inmotion-logo.jpg" alt="InMotion Logo" style="border-radius: 4px;">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13 2L3 14h8l-1 8 10-12h-8l1-8z" fill="#4FA3FF"/>
+                    </svg>
                     <span>InMotion</span>
                 </a>
 
@@ -49,7 +51,7 @@
                     Fitness,<br>
                     <span class="text-primary">On Your<br>Terms.</span>
                 </h1>
-                <p class="hero-description">Get daily, personalized workouts built for your needs by an Ivy League Athlete's fitness algorithm</p>
+                <p class="hero-description">Get daily, personalized workouts built for your need by an Ivy League Athlete's fitness algorithm</p>
                 <a href="#" class="btn btn-primary btn-lg">
                     JOIN FREE
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -59,7 +61,11 @@
             </div>
             <div class="hero-image">
                 <div class="app-placeholder">
-                    <img src="app-homescreen.jpg" alt="InMotion App Homescreen" style="width: 100%; height: 100%; object-fit: cover; border-radius: 2rem;">
+                    <svg width="64" height="64" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="3" y="3" width="18" height="18" rx="2" stroke="#9CA3AF" stroke-width="2"/>
+                        <path d="M3 9h18M9 21V9" stroke="#9CA3AF" stroke-width="2"/>
+                    </svg>
+                    <p>App Homescreen placeholder</p>
                 </div>
             </div>
         </div>
@@ -69,115 +75,48 @@
     <section id="how-it-works" class="how-it-works">
         <div class="container">
             <!-- Feature 1: Voice-First Design -->
-            <div class="feature-row">
+            <div class="feature">
                 <div class="feature-content">
-                    <div class="feature-badge-small">
+                    <div class="feature-badge">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M20 6L9 17l-5-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M5 13l4 4L19 7" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                         <span>VOICE-FIRST DESIGN</span>
                     </div>
-                    <h3 class="feature-row-title">Just tell us what you need.</h3>
-                    <p class="feature-row-description">InMotion is designed to be activated by your voice. No need to fumble through a complicated app interface -- simply tap, speak, and watch your workout appear</p>
+                    <h2 class="feature-title">Just tell us what you need.</h2>
+                    <p class="feature-description">InMotion is designed to be activated by your voice. No need to fumble through a complicated app interface -- simply tap, speak, and watch your workout appear</p>
                 </div>
-                <div class="feature-visual-area">
-                    <div class="visual-icon-circle">
+                <div class="feature-visual">
+                    <div class="visual-placeholder">
                         <svg width="64" height="64" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z" fill="#4FA3FF" fill-opacity="0.2" stroke="#4FA3FF" stroke-width="2"/>
                             <path d="M19 10v2a7 7 0 0 1-14 0v-2M12 19v4M8 23h8" stroke="#4FA3FF" stroke-width="2" stroke-linecap="round"/>
                         </svg>
+                        <p>Voice interaction placeholder</p>
                     </div>
-                    <p class="visual-label">Voice interaction placeholder</p>
                 </div>
             </div>
 
             <!-- Feature 2: Instant Workouts -->
-            <div class="feature-row feature-row-reverse">
-                <div class="feature-visual-area">
-                    <div class="visual-icon-circle">
+            <div class="feature feature-reverse">
+                <div class="feature-visual">
+                    <div class="visual-placeholder">
                         <svg width="64" height="64" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect x="5" y="2" width="14" height="20" rx="2" fill="#4FA3FF" fill-opacity="0.2" stroke="#4FA3FF" stroke-width="2"/>
                             <path d="M9 6h6M9 10h6M9 14h4" stroke="#4FA3FF" stroke-width="2" stroke-linecap="round"/>
                         </svg>
+                        <p>Workout generation placeholder</p>
                     </div>
-                    <p class="visual-label">Workout generation placeholder</p>
                 </div>
                 <div class="feature-content">
-                    <div class="feature-badge-small">
+                    <div class="feature-badge">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M20 6L9 17l-5-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M5 13l4 4L19 7" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                         <span>INSTANT WORKOUTS</span>
                     </div>
-                    <h3 class="feature-row-title">Personalized workout plans in seconds.</h3>
-                    <p class="feature-row-description">Our algorithm listens to your voice and instantly builds a unique workout. Whether you have 15 minutes or an hour, dumbbells or just bodyweight, we've got you</p>
-                </div>
-            </div>
-
-            <!-- Feature 3: Flexible Options -->
-            <div class="feature-row">
-                <div class="feature-content">
-                    <div class="feature-badge-small">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M20 6L9 17l-5-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        <span>FLEXIBLE OPTIONS</span>
-                    </div>
-                    <h3 class="feature-row-title">Database with over 8,000 exercises.</h3>
-                    <p class="feature-row-description">Suffering from a sore shoulder? Just don't like squats? Our database of over 8,000 exercises makes it easy to find the perfect fit for you</p>
-                </div>
-                <div class="feature-visual-area">
-                    <div class="visual-icon-circle">
-                        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z" fill="#4FA3FF" fill-opacity="0.2" stroke="#4FA3FF" stroke-width="2"/>
-                        </svg>
-                    </div>
-                    <p class="visual-label">Workout Options</p>
-                </div>
-            </div>
-
-            <!-- Feature 4: Voice-Powered -->
-            <div class="feature-row feature-row-reverse">
-                <div class="feature-visual-area">
-                    <div class="visual-icon-circle">
-                        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z" fill="#4FA3FF" fill-opacity="0.2" stroke="#4FA3FF" stroke-width="2"/>
-                            <path d="M19 10v2a7 7 0 0 1-14 0v-2M12 19v4M8 23h8" stroke="#4FA3FF" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
-                    </div>
-                    <p class="visual-label">Voice Control</p>
-                </div>
-                <div class="feature-content">
-                    <div class="feature-badge-small">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M20 6L9 17l-5-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        <span>VOICE-POWERED</span>
-                    </div>
-                    <h3 class="feature-row-title">Thorough workout how-to content makes learning new exercises easy</h3>
-                    <p class="feature-row-description">InMotion follows you along on your workout, providing form tips, photos and videos for guidance, and rep tracking mechanisms to ensure that you keep improving</p>
-                </div>
-            </div>
-
-            <!-- Feature 5: Unlimited Options -->
-            <div class="feature-row">
-                <div class="feature-content">
-                    <div class="feature-badge-small">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M20 6L9 17l-5-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        <span>UNLIMITED OPTIONS</span>
-                    </div>
-                    <h3 class="feature-row-title">Expansive database of pre-generated workouts</h3>
-                    <p class="feature-row-description">Not feeling like generating a new workout? InMotion has you covered with dozens of workout routines designed by our fitness experts</p>
-                </div>
-                <div class="feature-visual-area">
-                    <div class="visual-icon-circle">
-                        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M13 2L3 14h8l-1 8 10-12h-8l1-8z" fill="#4FA3FF"/>
-                        </svg>
-                    </div>
-                    <p class="visual-label">Adaptive AI</p>
+                    <h2 class="feature-title">Personalized workout plans in seconds.</h2>
+                    <p class="feature-description">Our algorithm listens to your voice and instantly builds a unique workout. Whether you have 15 minutes or an hour, dumbbells or just bodyweight,</p>
                 </div>
             </div>
         </div>
@@ -186,7 +125,7 @@
     <!-- FAQ Section -->
     <section class="faq">
         <div class="container">
-            <h2 class="section-title">FAQs</h2>
+            <h2 class="section-title">FAQ</h2>
             
             <div class="accordion">
                 <div class="accordion-item active">
@@ -209,7 +148,7 @@
                         </svg>
                     </button>
                     <div class="accordion-content">
-                        <p>No! InMotion saves all your generated workouts so you can reuse them whenever you want. You can build a library of favorite routines and return to them anytime. However, if your situation changes, like new equipment, different time constraints, or new goals, you can always generate a fresh workout tailored to your current needs.</p>
+                        <p>No! You can save your favorite workouts and reuse them whenever you want. You only need to generate a new workout when you want something different.</p>
                     </div>
                 </div>
 
@@ -233,7 +172,7 @@
                         </svg>
                     </button>
                     <div class="accordion-content">
-                        <p>Absolutely. InMotion is designed for lifters across the experience spectrum. With easy workout generation, exercise helper videos, and voice assistance, InMotion is the most accessible fitness app on the market.</p>
+                        <p>InMotion is perfect for beginners! Tell us your experience level and we'll create workouts that match your abilities, with proper form guidance and progression.</p>
                     </div>
                 </div>
 
@@ -269,7 +208,7 @@
                         </svg>
                     </button>
                     <div class="accordion-content">
-                        <p>InMotion can create workouts for any goal: strength training, cardio, flexibility, HIIT, endurance, or hybrid sessions. Whether you want to build muscle, lose weight, improve athletic performance, or stay active, InMotion tailors each workout to your specific objectives and time constraints.</p>
+                        <p>InMotion can create workouts for any goal: strength training, cardio, flexibility, HIIT, endurance, or hybrid sessions. Whether you want to build muscle, lose weight, improve athletic performance, or stay active, InMotion tailors each workout to your specific objectives and available time.</p>
                     </div>
                 </div>
             </div>
